# Agentic-AI-Resume-Coach

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  DEPLOYMENT_README.md  DEPLOYMENT_VISUAL_GUIDE.md  Dockerfile  QUICK_DEPLOY.md  README.md  agents.py  app.db  config.py  deploy.bat  deploy.sh  docker-compose.yml  graph.py  main.py  pyproject.toml  render.yaml  requirements-prod.txt  requirements.txt  semantic_test_out.txt  test_api.py  test_env.py
.github/workflows/: backend-ci.yml
backend/: .pip  QUICKSTART.md  __init__.py  agents.py  ai_schemas.py  app.db  config.py  db.py  graph.py  logging_config.py  main.py  render.yaml  requirements.txt  smoke_out.txt  test_utils.py
backend/ats/: __init__.py  embeddings.py  jd_fetcher.py  parser.py  scorer.py  skill_matcher.py
backend/database/: __init__.py  crud.py  db.py  models.py  schemas.py
backend/interview/: __init__.py  evaluator.py  question_generator.py  voice.py  voice_utils.py
backend/services/: cache.py  email_service.py  interview_analyzer.py  job_parser.py  llm_router.py  pdf_export.py  resume_service.py  task_service.py
frontend/: .eslintrc.cjs  .gitignore  QUICKSTART.md  README.md  build-log2.txt  build-log3.txt  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AnalyticsPanel.jsx  (+17 more)
scripts/: check_testclient.py  smoke_client_log.txt  smoke_test.py  smoke_test_client.py
services/: job_parser.py  llm_router.py  personalization_service.py  resume_service.py
templates/: report.html
(+24 files in other folders)
